--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "dev": "nodemon index.mjs"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "chalk": "^5.4.1",
     "cloudinary": "^2.6.0",
